// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@presenter/auth/register fails to register user when bio exceeds number of characters 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "bio",
      "message": "Expected string with a length between 0 and 65535 characters",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register fails to register user when date_of_birth is not valid date 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "date_of_birth",
      "message": "Expected date in one of the formats: DD-MM-YYYY, YYYY-MM-DD",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register fails to register user when email is missing out of required properties 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "email",
      "message": "Invalid email",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register fails to register user when first_name is invalid 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "first_name",
      "message": "Expected string with a length between 0 and 255 characters",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register fails to register user when gender is invalid 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "gender",
      "message": "Expected one of the following: female, male",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register fails to register user when last_name is invalid 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "last_name",
      "message": "Expected string with a length between 0 and 255 characters",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register fails to register user when password and password_confirmation are not matching 1`] = `
Object {
  "errors": Array [
    Object {
      "fields": Array [
        "password",
        "password_confirmation",
      ],
      "message": "Expected password to match password_confirmation",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register fails to register user when password is missing out of required properties 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "password",
      "message": "Expected string minimum 8 characters long, containing at least: 1 upper and 1 lower case, 1 digit and 1 special characters i.e. one of the following: #?!@$%^&*-",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register fails to register user when password_confirmation is missing out of required properties 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "password_confirmation",
      "message": "Expected string minimum 8 characters long, containing at least: 1 upper and 1 lower case, 1 digit and 1 special characters i.e. one of the following: #?!@$%^&*-",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register fails to register user when user with the email already exist 1`] = `
Object {
  "message": "Model of type User already exists",
}
`;

exports[`@presenter/auth/register fails to register user without required fields 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "email",
      "message": "Invalid email",
    },
    Object {
      "field": "password",
      "message": "Expected string minimum 8 characters long, containing at least: 1 upper and 1 lower case, 1 digit and 1 special characters i.e. one of the following: #?!@$%^&*-",
    },
    Object {
      "field": "password_confirmation",
      "message": "Expected string minimum 8 characters long, containing at least: 1 upper and 1 lower case, 1 digit and 1 special characters i.e. one of the following: #?!@$%^&*-",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register registers user returning back it visible fields and jwt token 1`] = `
Object {
  "token": "token",
  "user": Object {
    "bio": "short bio",
    "date_of_birth": "1969-12-31T23:00:00.000Z",
    "email": "valid.email@test.com",
    "first_name": "John",
    "gender": "male",
    "id": "1",
    "last_name": "Doe",
  },
}
`;

exports[`@presenter/auth/register registers user returning back it visible fields and jwt token: envelope 1`] = `
Object {
  "address": "noreply@cognitio.pl",
  "args": false,
}
`;

exports[`@presenter/auth/register registers user returning back it visible fields and jwt token: html 1`] = `"<h1>Hello,</h1><p>To activate your account click <a href=\\"link\\">here</a>, alternatively if the address is not active copy/paste into your browser.</p><p>kube-ts-server</p>"`;

exports[`@presenter/auth/register registers user returning back it visible fields and jwt token: subject 1`] = `"[kube-ts-server] Verify your email"`;

exports[`@presenter/auth/register registers user returning back it visible fields and jwt token: text 1`] = `"Hello, to activate your account click: link, alternatively if the address is not active copy/paste into your browser. kube-ts-server"`;

exports[`@presenter/auth/register registers user returning back it visible fields and jwt token: to 1`] = `
Array [
  Object {
    "address": "valid.email@test.com",
    "name": "",
  },
]
`;
